# LLM-as-a-Decision-Making-Core-for-Semantic-Capability-Check

./: .env.example  .gitignore  README.md  pyproject.toml
AAS Submodels/: L3. Screwing (example of provider instance).json  L4. Screwing (example of requester instance).json
dataset/: README.md
prompts/: system_prompt.md  user_prompt.md
resources/: L1. Capability Checking algorithm system prompt.md  L2. Structure of the model response.json
src/: capability_check.py
tests/: conftest.py
tests/group_1/: test_group_1.py
tests/group_2/: test_group_2.py
tests/group_3/: test_group_3.py
tests/group_4/: test_group_4.py
tests/support/: metrics.py  report_paths.py  summary_writer.py
